apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: ns-whoami
spec:
  type: ClusterIP
  selector: { app: whoami }
  ports:
    - port: 80
      targetPort: 8080
